[package]
name = "test"
version = "0.1.0"
edition = "2018"

[dependencies]
glow = { path = "../../" }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.31.1", optional = true }
sdl2 = { version = "0.35", optional = true }
winit = { version = "0.29.3" }
glutin-winit = "0.4.2"
raw-window-handle = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = { version = "0.2" }
